# Chat

./: README.md
Client testing code/: CMakeLists.txt  Client test.c
GUI testing code/: CMakeLists.txt  GUI test.c
Server testing code/: CMakeLists.txt  main.c
