cmake_minimum_required(VERSION 3.12)
project(untitled1 C)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

set(CMAKE_C_STANDARD 11)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled1 main.c)

TARGET_LINK_LIBRARIES(untitled1 ${GTK3_LIBRARIES})