cmake_minimum_required(VERSION 3.12)
project(Test)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c)

TARGET_LINK_LIBRARIES(untitled ${GTK3_LIBRARIES})
