cmake_minimum_required(VERSION 3.12)
project(Server_testing_code C)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

set(CMAKE_C_STANDARD 11)

add_executable(Server_testing_code main.c)

TARGET_LINK_LIBRARIES(Server_testing_code ${GTK3_LIBRARIES})